--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="buttons">
         <div class="button" onclick="CreateA4(1)">二年级(100内加减法)</div>
         <div class="button" onclick="CreateA4(2)">二年级(100内连加连减)</div>
-        <div class="button" onclick="CreateA4(3)">二年级(100内连加减乘除)</div>
+        <div class="button" onclick="CreateA4(3)">二年级(100内递等式)</div>
         <div class="button" onclick="CreateA4(4)">二年级(除法笔算)</div>
     </div>
     <div class="board">
@@ -35,7 +35,7 @@
             <li>点击上面按钮--&gt;在弹出的图上长按--&gt;保存图片到手机。</li>
             <li>适用A4纸张打印。</li>
             <li>程序完全免费，不含任何广告，欢迎分享。</li>
-            <li>当前版本 v2.1</li>
+            <li>当前版本 v2.2</li>
             <li>微信公众号:"二头乌游戏"</li>
             <li>email: eattonton@qq.com</li>
             <li>Supported By TriWeb.cn</li>
