--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="button" onclick="CreateA4(5)">三年级(除数一位)</div>
         <div class="button" onclick="CreateA4(6)">三年级(乘法二位)</div>
         <div class="button" onclick="CreateA4(7)">三升四(混合)</div>
+        <div class="button" onclick="CreateA4(8)">四年级(交换定律)</div>
     </div>
     <div class="board">
         <canvas id="board" width="1240" height="1754" style="border: 1px solid #000;"></canvas>
@@ -38,7 +39,7 @@
             <li>点击上面按钮--&gt;在弹出的图上长按--&gt;保存图片到手机。</li>
             <li>适用A4纸张打印。</li>
             <li>程序完全免费，不含任何广告，欢迎分享。</li>
-            <li>当前版本 v3.3</li>
+            <li>当前版本 v4.1</li>
             <li>微信公众号:"二头乌游戏"</li>
             <li>email: eattonton@qq.com</li>
             <li>Supported By TriWeb.cn</li>
